<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A4833"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ite_logo"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/welcomeTitle"
        android:textColor="@color/white"
        android:text="@string/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textSize="18sp"
        android:textColor="@color/white"
        android:id="@+id/welcomeSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeSubTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <Button
        android:text="@string/loginButton"
        android:layout_height="0dp"
        android:id="@+id/loginButton"
        android:background="@drawable/rounded"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:drawableBottom="@drawable/arrow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeSubTitle"
        app:layout_constraintBottom_toBottomOf="@+id/password" />

    <EditText
        android:hint="@string/loginHint"
        android:id="@+id/login"
        android:inputType="number"
        android:paddingStart="10dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rounded_corners"
        app:layout_constraintRight_toLeftOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="@id/loginButton" />

    <EditText
        android:hint="@string/passwordHint"
        android:paddingStart="10dp"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:background="@drawable/rounded_corners"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintRight_toLeftOf="@id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/clearButton"
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        app:layout_constraintRight_toRightOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>